fixed icons and aligned page

--- a/style.css
+++ b/style.css
@@ -33,19 +33,22 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 header {
-  display: grid;
-  grid-template-columns: 200px 1fr 200px;
+  width: 100%;
+  line-height: 45px;
+  border-bottom: 2px solid #ececec;
   position: fixed;
   top: 0;
   z-index: 2;
-  border-bottom: 2px solid #ececec;
+}
+.header-wrapper {
+  display: grid;
+  grid-template-columns: 200px 1fr 200px;
   background-color: white;
   color: black;
-  width: 100%;
-  height: 45px;
-  padding: 0 15px;
+  width: 1500px;
+  margin: auto;
+
 }
 
 header * {
@@ -92,7 +95,7 @@ main {
   grid-auto-flow: column;
   margin-top: 75px;
   grid-gap: 15px;
-  width: 1000px;
+  max-width: 1200px;
   color: #333;
 }
 
@@ -186,6 +189,22 @@ main h4 {
   color: #888;
 }
 
+.date-icons div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 250px;
+}
+
+.comments-number {
+  font-size: 12px;
+  margin-top: -10px;
+  margin-left: -37px;
+}
+
+
+
+
 main p {
   font-family: nyt-imperial;
 
@@ -228,8 +247,9 @@ iframe {
 .comments {
   display: flex;
   justify-content: space-between;
-
   align-items: center;
+  margin-bottom: 50px;
+  width: 600px;
 }
 
 .social-media {
@@ -237,16 +257,18 @@ iframe {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  width: 175px;
 }
 
 .social-media img {
   width: 32px;
   height: 32px;
+  margin: 5px;
 }
 
 .comments button {
   padding: 10px 90px;
-  margin: 10px 0 50px 0;
+  margin: 5px;
   background-color: #567b95;
   font-weight: bold;
   color: white;
@@ -314,6 +336,7 @@ hr {
   font-size: 14px;
   font-weight: 500;
   font-family: nyt-franklin;
+  margin-bottom: 25px;
 }
 
 
@@ -323,6 +346,8 @@ hr {
   padding: 25px 0;
   font-weight: bold;
   position: relative;
+  text-align: center;
+
 }
 
 .create-account::before {
@@ -332,7 +357,7 @@ hr {
   height: 1px;
   width: 75px;
   position: absolute;
-  left: 200px;
+  left: 33%;
   top: 5px;
 }
 
@@ -343,16 +368,20 @@ hr {
   height: 1px;
   width: 75px;
   position: absolute;
-  left: 200px;
+  left: 33%;
   bottom: 5px;
 }
-
+.create-account p {
+  font-size: 15px;
+    font-family: nyt-franklin;
+}
 .create-account a {
   color: rgb(50, 104, 145);
   background: white;
   text-decoration: none;
   display: block;
   text-align: center;
+    font-family: nyt-franklin;
 }
 
 .editors-pick {
@@ -397,7 +426,8 @@ hr {
 .bottom-container {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  margin: 0 150px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .bottom-container h6 {
@@ -495,7 +525,7 @@ hr {
   flex-direction: column;
   border-top: 1px solid black;
   margin: 0 15px;
-  width: 300px;
+  max-width: 300px;
 }
 
 footer {
@@ -503,7 +533,6 @@ footer {
   flex-direction: column;
   padding: 50px;
   align-items: center;
-  width: 100%;
   justify-content: space-around;
 
 
